2.3.1
 - Fixes incompatibility with some implementations of Unix "cut" program
2.3.0
 - Generates MinGW Makefile automatically
 - Documents MinGW build
 - Workaround for missing prepared-statement support
 - Potential bug fixed in closing of connections
 - Fixed incompatibility between new cursor streams and older backends
 - Removed pqxxbench
2.2.9
 - Bugfix in removing trigger
 - Added "failed connection" to regression test
 - Some changes to throw specifications
 - Putting libpq in its own namespace is optional
2.2.8
 - Moved libpq into pqxx::internal::pq namespace
 - New config system separates compiler-related items from libpq-related ones
 - Auto-generates Visual C++ Makefile, should always remain up-to-date now 
2.2.7
 - Bugfix: from_string() didn't handle LONG_MIN--thanks Yannick Boivin
2.2.6
 - Complete "pipeline" rewrite, for better exception safety
 - New garbage collection scheme for "result;" constructors now exception-free
2.2.5
 - First new cursor classes!
 - Fixed strange failure in tablewriter during large insertions
 - Updated tutorial
2.2.4
 - New utility class template, items<> for easy container initialization
 - New utility function template, separated_list()
 - Error handling bugfix in tablewriter
 - Fixed tablereader handling of lines ending in empty fields
 - tablereader lines no longer end in newline with old libpq versions
2.2.3
 - Trigger names no longer need to be proper identifiers
 - Compile fixes for g++ 3.4.0 and other modern compilers
 - Tablestreams may specify column lists
 - Deprecated Quote() in favour of sqlesc(); improved quoting
 - Fixed generation of libpqxx.spec
2.2.2
 - Bugfix in fieldstream w.r.t. reading strings on some systems
 - Renamed config.h to internalconfig.h to avoid confusion
 - New connection functions allow client to sleep until notification arrives
 - Notification functions return number of notifications received
 - Even fewer client-visible macros exported by libconfig.h
2.2.1